2011-05-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Makefile.am (dist-hook): DIST_REVISION now displays Git branch
	information

	* bin/torrus.fcgi.in: Let FCGI handler re-spawn every 5000
	requests or 48 hours for better DB stability

2011-05-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* BDB cursor destructors are explicitly controlled for better
	stability

2011-05-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: SNMP reachability stats are
	disabled when "only-devtypes" is in use, and can be forced by
	"enable-reachability-stats"

2011-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/snmp-defs.xml: new host-level template: snmp-reachability

	* perllib/Torrus/Collector/SNMP.pm: new collector type: 'snmp-reachable'

2011-04-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/SNMP_Failures.pm (mib_error): bugfix - now all
	MIB errors are registered, not just one

	* perllib/Torrus/Collector/SNMP.pm: API change: replaced getHostname()
	with getHostHash()

2011-03-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2790_HOST_RESOURCES.pm:
	added CPU Load graphs. Still some problems with persistent
	indexing and naming.

	* perllib/Torrus/DevDiscover/MicrosoftWindows.pm:
	added to interface filter: PPP, Tunnel, WAN Miniport, and
	QoS Packet Scheduler virtual interfaces
	interface-level nodeid is now dependent on MAC address

2011-01-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm (makeURL):
	Now nodeid is used in HTML whenever available

2010-12-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	new discovery parameter: RFC2863_IF_MIB::ifnick-from-ifname
	provides backwards compatibility with devices which have non-unique
	ifName values
