@@ -1,3 +1,9 @@
+2011-05-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CCOM.pm: new discovery module for
+	C-COM CAPSPAN devices
+	
+
 2011-05-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* Makefile.am (dist-hook): DIST_REVISION now displays Git branch
